--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW-Hant">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="./favicon.png" type="image/png" sizes="16x16" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="自行車道地圖資訊整合網" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <meta property="og:title" content="自行車道地圖資訊整合網" />
+    <meta property="og:description" content="自行車道地圖資訊整合網" />
+    <meta property="og:url" content="https://yiminprogram.github.io/2021-the-f2e-week-2/" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/yiminprogram/2022-portfolio/main/src/assets/screenshot/2021-thef2e-week2.png"
+    />
+    <title>自行車道地圖資訊整合網</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
